[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/2d/Tuto/tuto1.png" type="Texture" id=1]
[ext_resource path="res://Assets/2d/Tuto/tuto2.png" type="Texture" id=2]
[ext_resource path="res://Assets/GUI/DefaultTheme.tres" type="Theme" id=3]
[ext_resource path="res://Src/Tutorial/Tutorial1.gd" type="Script" id=4]
[ext_resource path="res://Assets/2d/Tuto/tuto3.png" type="Texture" id=5]
[ext_resource path="res://Assets/2d/Tuto/tuto_broken.png" type="Texture" id=6]
[ext_resource path="res://Assets/2d/Tuto/tuto_dash.png" type="Texture" id=7]
[ext_resource path="res://Assets/2d/Tuto/tuto_env.png" type="Texture" id=8]
[ext_resource path="res://Assets/2d/Tuto/tuto_icecream.png" type="Texture" id=9]

[node name="Tutorial1" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_horizontal_guides_": [ -9.09145, 8.90855 ],
"_edit_use_anchors_": false
}

[node name="TextureRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -2.0
margin_bottom = -2.0
color = Color( 0, 0.694118, 0.72549, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1180.0
margin_bottom = 1734.0
custom_constants/separation = 56
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PickupTuto" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 1180.0
margin_bottom = 144.0
custom_constants/separation = 37
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/VBoxContainer/PickupTuto"]
margin_right = 283.0
margin_bottom = 144.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/PickupTuto"]
margin_left = 320.0
margin_right = 867.0
margin_bottom = 144.0
size_flags_vertical = 5
theme = ExtResource( 3 )
text = "Pick up Items for your customer in the Item crates.

Items to pick up for a customer are indicated at the top of the
screen"

[node name="PlaceShelfTuto" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 200.0
margin_right = 1180.0
margin_bottom = 369.0
custom_constants/separation = 37
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect3" type="TextureRect" parent="MarginContainer/VBoxContainer/PlaceShelfTuto"]
margin_right = 235.0
margin_bottom = 169.0
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/PlaceShelfTuto"]
margin_left = 272.0
margin_right = 998.0
margin_bottom = 169.0
size_flags_vertical = 5
theme = ExtResource( 3 )
text = "Place the items on the shelves. 

Tip: Try to place as many as possible before you get overwhelmed by the customers."

[node name="PayTuto" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 425.0
margin_right = 1180.0
margin_bottom = 642.0
custom_constants/separation = 37
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect3" type="TextureRect" parent="MarginContainer/VBoxContainer/PayTuto"]
margin_right = 179.0
margin_bottom = 217.0
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/PayTuto"]
margin_left = 216.0
margin_right = 830.0
margin_bottom = 217.0
size_flags_vertical = 5
theme = ExtResource( 3 )
text = "Keep the Action button pressed to process the payment of a customer."

[node name="BrokenTuto" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 698.0
margin_right = 1180.0
margin_bottom = 893.0
custom_constants/separation = 37
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect3" type="TextureRect" parent="MarginContainer/VBoxContainer/BrokenTuto"]
margin_right = 299.0
margin_bottom = 195.0
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/BrokenTuto"]
margin_left = 336.0
margin_right = 942.0
margin_bottom = 195.0
size_flags_vertical = 5
theme = ExtResource( 3 )
text = "Angry customers can break a shelves. Keep the action button pressed
to fix a broker shelf."

[node name="DashTuto" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 949.0
margin_right = 1180.0
margin_bottom = 1182.0
custom_constants/separation = 37
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect3" type="TextureRect" parent="MarginContainer/VBoxContainer/DashTuto"]
margin_right = 428.0
margin_bottom = 233.0
texture = ExtResource( 7 )

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/DashTuto"]
margin_left = 465.0
margin_right = 806.0
margin_bottom = 233.0
size_flags_vertical = 5
theme = ExtResource( 3 )
text = "Go faster by pressing the dash button."

[node name="IcecreamTuto" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 1238.0
margin_right = 1180.0
margin_bottom = 1448.0
custom_constants/separation = 37
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect3" type="TextureRect" parent="MarginContainer/VBoxContainer/IcecreamTuto"]
margin_right = 234.0
margin_bottom = 210.0
texture = ExtResource( 9 )

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/IcecreamTuto"]
margin_left = 271.0
margin_right = 724.0
margin_bottom = 210.0
size_flags_vertical = 5
theme = ExtResource( 3 )
text = "Ice cream can only be displayed in an icecream shelf."

[node name="EnvTuto" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 1504.0
margin_right = 1180.0
margin_bottom = 1734.0
custom_constants/separation = 37
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect3" type="TextureRect" parent="MarginContainer/VBoxContainer/EnvTuto"]
margin_right = 354.0
margin_bottom = 230.0
texture = ExtResource( 8 )

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/EnvTuto"]
margin_left = 391.0
margin_right = 747.0
margin_bottom = 230.0
size_flags_vertical = 5
theme = ExtResource( 3 )
text = "Sometime, your own shop is against you."

[node name="ContinueButton" type="Button" parent="."]
anchor_left = 0.961
anchor_top = 0.976
anchor_right = 0.961
anchor_bottom = 0.976
margin_left = -100.08
margin_top = -33.72
margin_right = -1.08008
margin_bottom = 1.27997
theme = ExtResource( 3 )
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="focus_entered" from="ContinueButton" to="." method="_on_ContinueButton_focus_entered"]
[connection signal="mouse_entered" from="ContinueButton" to="." method="_on_ContinueButton_focus_entered"]
[connection signal="pressed" from="ContinueButton" to="." method="_on_ContinueButton_pressed"]
